places values of form inside of the formHandler function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <br><br>
           <input id='input-url' type="text" name="url" value="" placeholder="Enter your sermon URL..." class="input-text">
           <br><br>
-      
+          <input id='input-speaker' type="text" name="speaker" value="" placeholder="Speaker goes here" class="input-text">
+          <br><br>
+          
           <select id="topics" name="topics">
             <option value="1">Wisdom</option>
             <option value="2">Heaven</option>
